# aida

./: README.md  docker-compose.yml  pyproject.toml  test.py
.pixi/: config.toml
docker/: Modelfile  aida.Dockerfile
src/aida/: main.py
src/aida/api/: mongo.py  signal.py
src/aida/core/: chat.py
